--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
+    "pouchdb": "^7.0.0",
     "react": "16.3.2",
     "react-dom": "16.3.2",
+    "react-pouchdb": "^0.3.0",
     "react-redux": "5.0.7",
     "redux": "4.0.0",
     "youtube-api-search": "0.0.5"
